--- a/css/style.scss
+++ b/css/style.scss
@@ -43,82 +43,173 @@ Main Styling
 }
 
 /*********
- Computers
+ SECTIONS
 *********/
 
+// .comp{
+//   height: 500px;
+//   display:flex;
+//   flex-direction: column;
+//   margin-top: 25px;
+//   margin-bottom: 25px;
+// }
+
+// .top, .base{
+//   margin:0 auto;
+// }
+
+/*********
+ SECTIONS
+*********/
+.hr-section{
+  border:1px solid black;
+  margin: 25px 0;
+}
+
 .comp{
-  height: 500px;
-  display:flex;
-  flex-direction: column;
-  margin-top: 25px;
-  margin-bottom: 25px;
-}
+  height: calc(100vh);
 
-.top, .base{
-  margin:0 auto;
-}
+  .section1, .section2, .section3{
+    align-self: center;
+  }
+  .section1{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    .laptop{
+      margin:0px;
+      .top{
+        height:120px;
+        width:160px;
+        margin-left:20px;
+        background-image: url("../images/smallfeedme.png");
+        background-size: center;
+        border: 8px solid #97989E;
+        border-radius: 10px 10px 0 0
+      }
 
-.laptop{
-  // align-self: flex-start;
-  margin:15px auto;
-  .top{
-    height:120px;
-    width:160px;
-    background:black;
-    border: 8px solid #97989E;
-    border-radius: 10px 10px 0 0
+      .base{
+        height:10px;
+        width:200px;
+        background: #97989E;
+        border: 1px solid #97989E;
+        border-radius: 0 0 100px 100px;
+      }
+
+      .base:before{
+        content: ' ';
+        display:block;
+        height:5px;
+        width:50px;
+        background:#343436;
+        margin:auto;
+        border-radius: 0 0 50px 50px;
+      }
+    }
+    .projects-label{
+      align-self: center;
+    }
   }
 
-  .base{
-    height:10px;
-    width:200px;
-    background: #97989E;
-    border: 1px solid #97989E;
-    border-radius: 0 0 100px 100px;
+  .section2{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    .tablet{
+      height:120px;
+      width:160px;
+      background:black;
+      border: 5px solid #97989E;
+      border-right: 15px solid #97989E;
+      border-left: 15px solid #97989E;
+      border-radius: 10px;
+      p{
+        color:white;
+        position: relative;
+        left: 10px;
+        bottom: 35px;
+      }
+    }
+    .tablet:before{
+      content:' ';
+      display:block;
+      height:10px;
+      width:10px;
+      background:grey;
+      border-radius: 100%;
+      margin-left:101%;
+      margin-top:35%;
+    }
+    .about-label{
+      align-self: center;
+    }
   }
 
-  .base:before{
-    content: ' ';
-    display:block;
-    height:5px;
-    width:50px;
-    background:#343436;
-    margin:auto;
-    border-radius: 0 0 50px 50px;
+  .section3{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-items: center;
+    .phone{
+      height:100px;
+      width:50px;
+      background:black;
+      border: 2px solid #97989E;
+      border-radius: 10px;
+      border-width: 8px 2px 8px 2px;
+    }
+      .contact-label{
+        align-self: center;
+      }
   }
 }
-
-.tablet{
-  height:120px;
-  width:160px;
-  margin:15px auto;
-  background:black;
-  border: 5px solid #97989E;
-  border-right: 15px solid #97989E;
-  border-left: 15px solid #97989E;
-  border-radius: 10px;
+/************
+ dev section
+************/
+#skills{
+  background: #919191;
+  text-align: center;
+  padding: 15px 0;
+}
+.devimg{
+  width:10%;
 }
 
-.tablet:before{
-  content:' ';
-  display:block;
-  height:10px;
-  width:10px;
-  background:grey;
-  border-radius: 100%;
-  margin-left:101%;
-  margin-top:35%;
+.other-skills{
+  font-size: 25px;
 }
 
-.phone{
-  height:100px;
-  width:50px;
-  margin:15px auto;
-  background:black;
-  border: 2px solid #97989E;
-  border-radius: 10px;
-  border-width: 8px 2px 8px 2px;
+/************
+ PORTFOLIO
+************/
+.project-photos{
+  width: 75%;
+  margin-bottom: 10px;
 }
+.project-descriptions{
+  text-align: center;
+}
+hr{
+  margin: 0 0 10px 0;
+  border-bottom: 1px solid grey;
+}
+.project-container p.project-links{
+  margin: 0 auto 5px;
+  font-size: 20px;
+  text-align: center;
+}
+.project-container .project-descriptions p{
+  font-size: 20px;
+  font-family: georgia, sans-serif;
+  text-align: center;
+}
+.project-container .project-descriptions .project-photos{
+  margin: 0 auto;
+}
+
+#boi{
+  margin-top: 15px;
+}
+
 
 /************
 Media Queries
@@ -128,12 +219,14 @@ Media Queries
     NAV
 ************/
 @media (min-width: 769px){
+
+  /*HEADER*/
   .main-header{
     height: 75px;
     justify-content: flex-end;
     background:pink;
     .nav{
-      margin-top: 3em;
+      margin-top: 1em;
       flex-direction: row;
       justify-content: space-around;
       .navitem{
@@ -146,6 +239,25 @@ Media Queries
       }
     }
   }
+
+  /*home page*/
+  .comp{
+    display: flex;
+    justify-content: space-around;
+
+    .laptop{
+      margin:0;
+    }
+
+
+    .labels{
+      display: none;
+    }
+    .hr-section{
+      display:none;
+    }
+  }
+
 }
 
 @media(min-width:1025px){
@@ -169,14 +281,33 @@ Media Queries
 }
 
 /************
-  Computers
+portfolio mq
 ************/
-@media(min-width:769px){
-  .comp{
-    flex-direction: row;
-
-    .laptop, .tablet, .phone{
-      align-self: flex-start;
-    }
+@media (min-width: 850px) {
+  .project-descriptions{
+    display: flex;
+    align-items: center;
+    margin: 0 20px 10px;
+  }
+  .project-photos{
+    width: 50%;
   }
 }
+
+/************
+  Computers
+************/
+// @media(min-width:769px){
+//   .comp{
+//     flex-direction: row;
+//
+//     .laptop, .tablet, .phone{
+//       align-self: flex-start;
+//     }
+//   }
+// }
+
+
+/********************
+ portfolio queries
+********************/
