--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ Main Styling
     grid-template-columns: 50% 50%;
     justify-items: center; }
     .comp .section1 .laptop {
-      margin: 0px;
+      margin: auto;
       display: flex;
       flex-direction: column;
       align-items: center; }
